# Blueprint

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  start.ps1
.github/workflows/: diamond_guard.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: architect.py  base.py  documentation.py  orchestrator.py  runtime.py
backend/app/api/routes/: analyze.py  diagrams.py  diff.py  export.py  health.py  query.py
backend/app/core/: __init__.py  akg.py  akg_builder.py  diff_engine.py  export_engine.py  git_navigator.py  language_configs.py  parser.py  query_engine.py  repository.py  tree_sitter_parser.py
backend/app/evidence/: __init__.py  linker.py
backend/tests/: __init__.py  test_api.py  test_diff.py  test_export.py  test_main_refactor.py  test_query.py  test_tree_sitter.py
frontend/: Dockerfile  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analyze/[id]/: page.tsx
frontend/src/components/: analysis-progress.tsx  app-shell.tsx  audience-selector.tsx  diff-viewer.tsx  documentation-tabs.tsx  evidence-panel.tsx  export-buttons.tsx  mermaid-viewer.tsx  query-interface.tsx  repo-input.tsx
frontend/src/hooks/: use-analysis-websocket.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/stores/: analysis.ts
frontend/src/types/: analysis.ts
